--- a/lib/client/app/application/global/dialogs/tasksDetail.html
+++ b/lib/client/app/application/global/dialogs/tasksDetail.html
@@ -189,25 +189,25 @@
                                             <label>Choose Which Day To Run The Task</label>
                                             <md-select ng-model="taskUpdateObj.runDay" ng-required="taskUpdateObj.isReoccuring">
                                                 <md-option><em>None</em></md-option>
-                                                <md-option ng-value="'sunday'">
+                                                <md-option ng-value="0">
                                                     Sunday
                                                 </md-option>
-                                                <md-option ng-value="'monday'">
+                                                <md-option ng-value="1">
                                                     Monday
                                                 </md-option>
-                                                <md-option ng-value="'tuesday'">
+                                                <md-option ng-value="2">
                                                     Tuesday
                                                 </md-option>
-                                                <md-option ng-value="'wednesday'">
+                                                <md-option ng-value="3">
                                                     Wednesday
                                                 </md-option>
-                                                <md-option ng-value="'thursday'">
+                                                <md-option ng-value="4">
                                                     Thursday
                                                 </md-option>
-                                                <md-option ng-value="'friday'">
+                                                <md-option ng-value="5">
                                                     Friday
                                                 </md-option>
-                                                <md-option ng-value="'saturday'">
+                                                <md-option ng-value="6">
                                                     Saturday
                                                 </md-option>
                                             </md-select>
