--- a/lib/client/app/application/global/dialogs/tasks.html
+++ b/lib/client/app/application/global/dialogs/tasks.html
@@ -68,7 +68,7 @@
                                 <md-switch class="md-secondary" ng-model="task.enabled"></md-switch>
                                 <md-divider></md-divider>
                             </md-list-item>
-                            <md-list-item ng-show="!tasklist.length">
+                            <md-list-item ng-show="tasklist.length < 0">
                                 <p>You don't have any tasks configured yet.</p>
                             </md-list-item>
                         </md-list>
