--- a/lib/client/app/application/global/dialogs/tasksDetail.html
+++ b/lib/client/app/application/global/dialogs/tasksDetail.html
@@ -184,7 +184,7 @@
                                             </md-select>
                                         </md-input-container>
                                     </md-list-item>
-                                    <md-list-item ng-show="taskUpdateObj.isReoccuring">
+                                    <md-list-item ng-show="taskUpdateObj.isReoccuring != 'monthly' && !taskUpdateObj.isGeneratedByUser && !taskUpdateObj.isManuallyTriggered">
                                         <md-input-container class="md-block lightweight-md-input" flex>
                                             <label>Choose Which Day To Run The Task</label>
                                             <md-select ng-model="taskUpdateObj.runDay" ng-required="taskUpdateObj.isReoccuring">
@@ -214,7 +214,7 @@
                                         </md-input-container>
                                     </md-list-item>
                                     <md-list-item>
-                                        <md-input-container class="md-block lightweight-md-input" flex="100" flex-sm="100" flex-gt-sm="50">
+                                        <md-input-container class="md-block lightweight-md-input" flex="100" flex-sm="100" flex-gt-sm="100">
                                             <label>Hour</label>
                                             <md-select ng-model="taskUpdateObj.runTime" ng-required="true">
                                                 <md-option ng-repeat="time in timesSans" ng-value="time">
