--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -333,7 +333,7 @@
                                                     </md-select>
                                                 </md-input-container>
                                                 <div ng-messages="createTaskForm.run_day.$error">
-                                                    <div ng-message="required">Run week required!</div>
+                                                    <div ng-message="required">Run day required!</div>
                                                 </div>
                                             </md-list-item>
 
