--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -42,7 +42,7 @@
 
 
 
-                        <form name="createTaskForm" ng-init="part_one = true; part_two = false; part_three = false" style="display: block;" flex flex-gt-sm="40">
+                        <form name="createTaskForm" ng-init="part_one = true; part_two = false; part_three = false" style="width: 100%" layout="row" layout-align="center start" flex>
                             
                         <!-- ============================= PART ONE CONTENT =============================== -->
                         <!-- ============================= PART ONE CONTENT =============================== -->
