--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -85,21 +85,21 @@
                                         <md-input-container class="md-block lightweight-md-input" flex>
                                             <label>Task Greeting <i>(Optional)</i></label>
                                             <md-select name="greeting" ng-model="taskAddObj.greeting">
-                                                <md-option ng-value="false"><em>None</em></md-option>
+                                                <md-option><em>None</em></md-option>
                                                 <md-option ng-value="Hello Name">
-                                                    Hello [Name]
+                                                    Hello Name
                                                 </md-option>
                                                 <md-option ng-value="Hey There">
                                                     Hey There
                                                 </md-option>
                                                 <md-option ng-value="Name">
-                                                    [Name]
+                                                    Name
                                                 </md-option>
-                                                <md-option ng-value="Good Day Name">
-                                                    Good [Time of day] [Name]
+                                                <md-option ng-value="Good Time Of Day Name">
+                                                    Good Time Of Day Name
                                                 </md-option>
                                                 <md-option ng-value="Hi Name">
-                                                    Hi [Name]
+                                                    Hi Name
                                                 </md-option>
                                             </md-select>
                                         </md-input-container>
@@ -121,7 +121,7 @@
                                         <md-input-container class="md-block lightweight-md-input" flex>
                                             <label>Task Salutation <i>(Optional)</i></label>
                                             <md-select name="salutation" ng-model="taskAddObj.salutation">
-                                                <md-option ng-value="false"><em>None</em></md-option>
+                                                <md-option><em>None</em></md-option>
                                                 <md-option ng-value="Sincerely">
                                                     Sincerely
                                                 </md-option>
@@ -324,8 +324,8 @@
                                     <md-list-item>
                                         <md-input-container class="md-block lightweight-md-input" flex>
                                             <label>What type of task is this?</label>
-                                            <md-select name="reoccuringTrigger" ng-model="taskAddObj.type" ng-required="true">
-                                                <md-option ng-value="false"><em>None</em></md-option>
+                                            <md-select name="typeOfTrigger" ng-model="taskAddObj.type" ng-required="true">
+                                                <md-option><em>None</em></md-option>
                                                 <md-option ng-value="onetime">
                                                     One Time
                                                 </md-option>
@@ -339,7 +339,7 @@
                                                     User Generated
                                                 </md-option>
                                             </md-select>
-                                            <div ng-messages="createTaskForm.reoccuringTrigger.$error" ng-show="createTaskForm.reoccuringTrigger.$dirty">
+                                            <div ng-messages="createTaskForm.typeOfTrigger.$error" ng-show="createTaskForm.typeOfTrigger.$dirty">
                                                 <div ng-message="required">This option must be selected!</div>
                                             </div>
                                         </md-input-container>
