disabled select option

--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -335,7 +335,7 @@
                                                 <md-option ng-value="manual">
                                                     Manual
                                                 </md-option>
-                                                <md-option ng-disabled>
+                                                <md-option ng-disabled="true">
                                                     User Generated
                                                 </md-option>
                                             </md-select>
