--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -154,7 +154,7 @@
                                         </md-input-container>
                                     </md-list-item>
 
-                                    <md-list-item nd-show="taskAddObj.link == 'Custom'">
+                                    <md-list-item ng-show="taskAddObj.link == 'Custom'">
                                         <md-input-container class="md-block lightweight-md-input" flex>
                                             <label>Custom URL</label>
                                             <input name="customURL" ng-model="taskAddObj.customURL" minlength="3" required>
@@ -237,7 +237,7 @@
                                     <md-list-item>
                                         <md-input-container class="md-block lightweight-md-dropdown">
                                             <label>Specify Users To Send Message To</label>
-                                            <md-select name="send_to_users" ng-model="taskAddObj.send_to_users" multiple flex ng-required="!taskAddObj.isGeneratedByUser">
+                                            <md-select name="send_to_users" ng-model="taskAddObj.send_to_users" multiple flex>
                                                 <md-option><em>None</em></md-option>
                                                 <md-option ng-value="respond">Respond To User Action</md-option>
                                                 <md-option ng-hide="taskAddObj.send_to_users == 'respond'" ng-repeat="user in userslist" ng-value="user.id">
@@ -250,7 +250,7 @@
                                     <md-list-item ng-show="!taskAddObj.isGeneratedByUser">
                                         <md-input-container class="md-block lightweight-md-input">
                                             <label>User Types To Send Message To</label>
-                                            <md-select name="send_to_roles" ng-model="taskAddObj.send_to_roles" multiple flex ng-required="!taskAddObj.isGeneratedByUser">
+                                            <md-select name="send_to_roles" ng-model="taskAddObj.send_to_roles" multiple flex>
                                                 <md-option><em>None</em></md-option>
                                                 <md-option ng-repeat="role in rolelist" ng-value="role.role">
                                                     {{role.role}}
@@ -262,7 +262,7 @@
                                         </md-input-container>
                                     </md-list-item>
 
-                                    <md-list-item ng-show="!taskAddObj.isGeneratedByUser">
+                                    <md-list-item>
                                         <md-input-container class="md-block lightweight-md-dropdown">
                                             <label>Specify Users To Send Report To</label>
                                             <md-select name="send_report_to_users" ng-model="taskAddObj.send_report_to_users" multiple flex ng-required="!taskAddObj.isGeneratedByUser">
@@ -324,7 +324,7 @@
                                     <md-list-item>
                                         <md-input-container class="md-block lightweight-md-input" flex>
                                             <label>What type of task is this?</label>
-                                            <md-select name="typeOfTrigger" ng-model="taskAddObj.type" ng-required="true">
+                                            <md-select name="typeOfTrigger" ng-model="taskAddObj.taskType" ng-required="true">
                                                 <md-option><em>None</em></md-option>
                                                 <md-option ng-value="onetime">
                                                     One Time
@@ -347,7 +347,7 @@
 
                                     <md-divider></md-divider>
 
-                                    <span ng-show="taskAddObj.type == 'onetime' || taskAddObj.type == 'reoccuring'">
+                                    <span ng-show="taskAddObj.taskType == 'onetime' || taskAddObj.taskType == 'reoccuring'">
 
                                         <md-card-header>
                                             <md-card-header-text>
@@ -382,10 +382,10 @@
                                             </md-input-container>
                                         </md-list-item> -->
                                                             
-                                        <md-list-item ng-show="taskAddObj.type == 'reoccuring'">
+                                        <md-list-item ng-show="taskAddObj.taskType == 'reoccuring'">
                                             <md-input-container class="md-block lightweight-md-input" flex>
                                                 <label>How Often Does This Task Run?</label>
-                                                <md-select ng-model="taskAddObj.frequency" name="createTaskForm.frequency" ng-required="taskAddObj.type == 'reoccuring'">
+                                                <md-select ng-model="taskAddObj.frequency" name="createTaskForm.frequency" ng-required="taskAddObj.taskType == 'reoccuring'">
                                                     <md-option><em>None</em></md-option>
                                                     <md-option ng-value="'onCreate'">
                                                         Once Created
