--- a/lib/client/app/application/global/dialogs/userVault.html
+++ b/lib/client/app/application/global/dialogs/userVault.html
@@ -1,17 +1,31 @@
+<!-- Backend Dialog Boilerplate -->
+
 <div class="dialog-curtain userVault" ng-show="user_vault_visible == true" ng-controller="lightweightController">
+    
     <md-card class="suite-dialog md-card-base card inputs">
-        <md-card-title style="position: relative;">
+
+        <md-card-title style="position: relative;" layout="column" layout-align="start center" layout-gt-sm="row" layout-align-gt-sm="center center">
+
             <md-button ng-click="openAddUser()" class="md-fab md-mini" aria-label="Add a user" style="position: absolute; bottom: -26px; left: 16px; background-color: {{base_hue_lightest.value}}!important;">
                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add User" md-font-library="material-icons">add</md-icon>
             </md-button>
+
             <md-card-title-text>
                 <span class="md-headline">User Vault</span>
             </md-card-title-text>
+
         </md-card-title>
+
         <md-card-content flex>
+        
             <md-content class="md-padding" flex>
+
                 <div layout="column" layout-wrap layout-align="space-around center" flex>
+
                     <div layout="column" layout-gt-sm="row" layout-align="center start" layout-align-gt-sm="start center" layout-margin flex="100" style="width: 100%">
+
+<!-- Backend Dialog Boilerplate -->
+
                         <div layout="row" layout-align="start center">
                             <md-button ng-disabled="currentUserPage == 0" ng-click="currentUserPage = 0" class="md-icon-button" aria-label="Clear Media Search">
                                 <md-icon style="color: {{base_hue_darker.value}};">first_page</md-icon>
